argorollouts/canary-release/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: email-service
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: email-service
